--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                      <div> <button class="orange" onclick="orange();"> </div> 
                      <div> <button class="yellow" onclick="yellow();"> </div>
                      <div class="slidecontainer">
-                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                        <input type="range" id="theLineWidth" min="2" max="40" value="2" title="Line width"> 
                      </div>
                   </div>
                
